# ld1py

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
ld1py/: http.py  meta.py
tests/: conftest.py  test_http.py  test_meta.py
