[metadata]
name = ld1py
version = 0.0.1
author = LD1 Labs
author_email = info@ld1labs.com
description = Common python utilities for LD1 Labs projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismix/ld1py
project_urls =
    Bug Tracker = https://github.com/ismix/ld1py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src